kubernetes/backend/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wasigo-backend
  namespace: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wasigo-backend
  template:
    metadata:
      labels:
        app: wasigo-backend
    spec:
      containers:
        - name: wasigo-backend
          image: nginx
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
